<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:theme="@style/toolbarTheme"
        app:menu="@menu/menu_detail" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin"
                android:text="选择加解密算法"
                android:textSize="16sp"
                android:theme="@style/mainTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/spinnerEntries"
                android:overlapAnchor="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDecoded"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toTopOf="@id/cardView"
            app:layout_constraintEnd_toStartOf="@id/buttonCopyEncodedString"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayoutHeader">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDecoded"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/decoded_string"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonCopyDecodedString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:text="@string/copy"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayoutDecoded" />

        <Button
            android:id="@+id/buttonPasteDecodedString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paste"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonClearDecodedString"
            app:layout_constraintEnd_toEndOf="@+id/buttonCopyDecodedString"
            app:layout_constraintTop_toBottomOf="@id/buttonCopyDecodedString" />

        <Button
            android:id="@+id/buttonClearDecodedString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutDecoded"
            app:layout_constraintEnd_toEndOf="@+id/buttonPasteDecodedString" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/buttonEncode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/encode"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textInputLayoutKey"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutKey"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/key"
                        android:inputType="text"
                        android:maxLines="1"
                        android:selectAllOnFocus="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonDecode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/decode"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textInputLayoutKey"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEncoded"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonCopyEncodedString"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEncoded"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/encoded_string"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonCopyEncodedString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:text="@string/copy"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textInputLayoutEncoded" />

        <Button
            android:id="@+id/buttonPasteEncodedString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paste"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonClearEncodedString"
            app:layout_constraintEnd_toEndOf="@+id/buttonCopyEncodedString"
            app:layout_constraintTop_toBottomOf="@id/buttonCopyEncodedString" />

        <Button
            android:id="@+id/buttonClearEncodedString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutEncoded"
            app:layout_constraintEnd_toEndOf="@+id/buttonPasteEncodedString" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>